// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Crossing Details Small Width 1`] = `
<div
  className="storybook--sm"
>
  <div
    className="CrossingDetails"
  >
    <div
      className="CrossingDetails__details-container"
    >
      <div
        className="CrossingDetails__details"
      >
        <div
          className="CrossingDetails__field-group"
        >
          <label
            className="Shared__label"
            htmlFor="crossingName"
          >
            Display Name*
          </label>
          <input
            className="Shared__text-input"
            disabled={false}
            id="crossingName"
            onChange={[Function]}
            type="text"
            value="Spurlock Valley"
          />
          <div
            className="Shared__input-description"
          >
            Name your crossings by intersections (ie, Onion Creek Blvd. & 5th Ave) or waypoints (5th Ave. Denny’s)
          </div>
        </div>
        <div
          className="CrossingDetails__lat-lng-group"
        >
          <div
            className="CrossingDetails__lat-lng-container"
          >
            <label
              className="Shared__label"
              htmlFor="Latitude"
            >
              Latitude*
            </label>
            <input
              className="Shared__text-input Shared__text-input--disabled"
              disabled={true}
              onChange={[Function]}
              style={
                Object {
                  "width": "100%",
                }
              }
              type="text"
              value="30.267"
            />
          </div>
          <div
            className="space_5"
          />
          <div
            className="CrossingDetails__lat-lng-container"
          >
            <label
              className="Shared__label"
              htmlFor="Longitude"
            >
              Longitude*
            </label>
            <input
              className="Shared__text-input Shared__text-input--disabled"
              disabled={true}
              onChange={[Function]}
              style={
                Object {
                  "width": "100%",
                }
              }
              type="text"
              value="-97.768"
            />
          </div>
          <div
            className="EditUser__buttons hidden"
            style={
              Object {
                "paddingLeft": 0,
              }
            }
          >
            <button
              className="Shared__button EditUser__cancel-button Shared__button--secondary"
              disabled={false}
              onClick={[Function]}
            >
              Cancel
            </button>
            <button
              className="Shared__button EditUser__next-button Shared__button--primary"
              disabled={false}
              onClick={[Function]}
            >
              Apply
            </button>
          </div>
        </div>
        <div
          className="CrossingDetails__field-group"
        >
          <label
            className="Shared__label"
            htmlFor="streetAddress"
          >
            Street Address*
          </label>
          <input
            className="Shared__text-input"
            disabled={false}
            id="streetAddress"
            onChange={[Function]}
            type="text"
            value="605 Spurlock Valley · West Lake Hills, TX 78746"
          />
          <div
            className="Shared__input-description"
          >
            The human readable address for the crossing
          </div>
        </div>
        <div
          className="CrossingDetails__field-group"
        >
          <label
            className="Shared__label"
            htmlFor="crossingDescription"
          >
            Additional Description (Optional)
          </label>
          <input
            className="Shared__text-input"
            disabled={false}
            id="crossingDescription"
            onChange={[Function]}
            type="text"
            value="E of Intersection w/ Clifford"
          />
          <div
            className="Shared__input-description"
          >
            Does the location need additional clarification? ie, “Southbound lane only”
          </div>
        </div>
      </div>
      <div
        className="CrossingDetails__aside"
      >
        <div
          className="CrossingDetails__field-group"
        >
          <label
            className="Shared__label"
          >
            ID#
          </label>
           
          <input
            className="Shared__text-input Shared__text-input--disabled"
            disabled={true}
            type="text"
            value={1}
          />
        </div>
        <button
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-camera fa-lg"
          />
        </button>
        <div
          className="CrossingDetails__communities"
        >
          <label
            className="Shared__label"
          >
            Communities
          </label>
          <div
            className="CrossingDetails__communities-list"
          >
            <button
              className="CrossingDetails__community-tag"
              disabled={true}
              onClick={[Function]}
            >
              All of Texas.
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="CrossingDetails__buttons"
    >
      <button
        className="Shared__button Shared__button--primary"
        disabled={false}
        onClick={[Function]}
      >
        Update Crossing
      </button>
      <button
        className="Shared__button Shared__button--secondary"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </button>
      <div
        className="CrossingDetails__buttons"
      >
        <div>
          <button
            className="button button--plaintext color-highlight"
            onClick={[Function]}
          >
            Delete Crossing
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Header Large Width 1`] = `
<div
  className="storybook--lg"
>
  <div
    className="CrossingListHeaderContainer"
  >
    <div
      className="CrossingListHeader"
    >
      <div
        className="CrossingListSearch"
      >
        <input
          className="CrossingListSearchInput"
          placeholder="Search your crossings"
          type="text"
        />
        <div
          className="CrossingListSearchButton"
        >
          <span
            aria-hidden={true}
            className="fa fa-search"
          >
            <span
              style={
                Object {
                  "border": "0px",
                  "clip": "rect(0px, 0px, 0px, 0px)",
                  "height": "1px",
                  "margin": "-1px",
                  "overflow": "hidden",
                  "padding": "0px",
                  "position": "absolute",
                  "width": "1px",
                }
              }
            >
              Search
            </span>
          </span>
        </div>
      </div>
      <div
        className="CrossingListFilterContainer CrossingListFilterContainer--disabled"
      >
        <div
          className="CrossingListFilter"
        >
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Open 
            </div>
          </label>
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Caution
               
            </div>
          </label>
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Closed
               
            </div>
          </label>
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Long-Term Closure
               
            </div>
          </label>
        </div>
      </div>
      <div
        className="CrossingListSpacer"
      />
      <div
        className="CrossingListToggleMenu"
      >
        <div
          className="CrossingListFilterToggle"
          onClick={[Function]}
        >
          Filter
          <div
            className="CrossingListHeader-icon"
          >
            <span
              aria-hidden={true}
              className="fa fa-plus"
            >
              <span
                style={
                  Object {
                    "border": "0px",
                    "clip": "rect(0px, 0px, 0px, 0px)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": "0px",
                    "position": "absolute",
                    "width": "1px",
                  }
                }
              >
                Show
              </span>
            </span>
          </div>
        </div>
        <div
          className="CrossingListSortToggle"
        >
          Last Updated
          <div
            className="CrossingListHeader-icon"
          >
            <span
              aria-hidden={true}
              className="fa fa-caret-down"
            >
              <span
                style={
                  Object {
                    "border": "0px",
                    "clip": "rect(0px, 0px, 0px, 0px)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": "0px",
                    "position": "absolute",
                    "width": "1px",
                  }
                }
              >
                Descending
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Header Small Width 1`] = `
<div
  className="storybook--sm"
>
  <div
    className="CrossingListHeaderContainer"
  >
    <div
      className="CrossingListHeader"
    >
      <div
        className="CrossingListSearch"
      >
        <input
          className="CrossingListSearchInput"
          placeholder="Search your crossings"
          type="text"
        />
        <div
          className="CrossingListSearchButton"
        >
          <span
            aria-hidden={true}
            className="fa fa-search"
          >
            <span
              style={
                Object {
                  "border": "0px",
                  "clip": "rect(0px, 0px, 0px, 0px)",
                  "height": "1px",
                  "margin": "-1px",
                  "overflow": "hidden",
                  "padding": "0px",
                  "position": "absolute",
                  "width": "1px",
                }
              }
            >
              Search
            </span>
          </span>
        </div>
      </div>
      <div
        className="CrossingListFilterContainer CrossingListFilterContainer--disabled"
      >
        <div
          className="CrossingListFilter"
        >
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Open 
            </div>
          </label>
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Caution
               
            </div>
          </label>
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Closed
               
            </div>
          </label>
          <label
            className="FilterCheckbox CrossingListFilterCheckbox"
          >
            <input
              alt="Disabled"
              className="FilterCheckbox__button"
              role="checkbox"
              src="checkbox-disabled.svg"
              type="image"
            />
            <div
              className="FilterCheckbox__children"
            >
              Long-Term Closure
               
            </div>
          </label>
        </div>
      </div>
      <div
        className="CrossingListSpacer"
      />
      <div
        className="CrossingListToggleMenu"
      >
        <div
          className="CrossingListFilterToggle"
          onClick={[Function]}
        >
          Filter
          <div
            className="CrossingListHeader-icon"
          >
            <span
              aria-hidden={true}
              className="fa fa-plus"
            >
              <span
                style={
                  Object {
                    "border": "0px",
                    "clip": "rect(0px, 0px, 0px, 0px)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": "0px",
                    "position": "absolute",
                    "width": "1px",
                  }
                }
              >
                Show
              </span>
            </span>
          </div>
        </div>
        <div
          className="CrossingListSortToggle"
        >
          Last Updated
          <div
            className="CrossingListHeader-icon"
          >
            <span
              aria-hidden={true}
              className="fa fa-caret-down"
            >
              <span
                style={
                  Object {
                    "border": "0px",
                    "clip": "rect(0px, 0px, 0px, 0px)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": "0px",
                    "position": "absolute",
                    "width": "1px",
                  }
                }
              >
                Descending
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Caution 1`] = `
<div
  className=""
>
  <div
    className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
  >
    <div
      className="DashboardCrossingListItem__overview"
    >
      <div
        className="DashboardCrossingListItem__crossing-name"
      >
        <a
          href="/dashboard/crossing/1"
        >
          Spurlock Valley
        </a>
      </div>
      <div
        className="DashboardCrossingListItem__overview-details"
      >
        <div
          className="DashboardCrossingListItem__overview-location"
        >
          <div
            className="CrossingListItemLocationContainer"
          >
            <div>
              605 Spurlock Valley · West Lake Hills, TX 78746
            </div>
            <div
              className="CrossingListItemLocationContainer__description"
            >
              E of Intersection w/ Clifford
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__community-list"
          >
            <div
              className="CrossingCommunityList"
              onClick={[Function]}
            >
              <a
                href="/map/community/1234"
                onClick={[Function]}
              >
                <span
                  className="CrossingCommunityList__item"
                >
                  All of Texas.
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__overview-meta"
        >
          <div>
            10/10/2017
          </div>
          <div>
            4:35 AM
          </div>
          <div
            className="DashboardCrossingListItem__user"
          >
            S. Admin
          </div>
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__controls"
    >
      <div
        className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            <div>
              Status: 
              Caution
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="StatusToggleContainer"
          >
            <div
              className="StatusToggleItem StatusToggleItem__open"
              onClick={[Function]}
            >
              <img
                alt="Open"
                src="status-open-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__caution active"
              onClick={[Function]}
            >
              <img
                alt="Caution"
                src="status-caution.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__closed"
              onClick={[Function]}
            >
              <img
                alt="Closed"
                src="status-closed-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__longterm"
              onClick={[Function]}
            >
              <img
                alt="Closed Long-Term"
                src="status-long-term-inactive.svg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Reason
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="Dropdown"
          >
            <select
              className="Dropdown__select"
              id=""
              name=""
              onChange={[Function]}
              value={1}
            >
              <option
                value={1}
              >
                Flooded
              </option>
              <option
                value={2}
              >
                Bridge Broken
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Notes to the public
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <input
            className="DashboardCrossingListItem__notes-text-box"
            onChange={[Function]}
            type="text"
            value="Watch Out"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Caution Dirty 1`] = `
<div
  className="DashboardCrossingListItem--dirty"
>
  <div
    className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
  >
    <div
      className="DashboardCrossingListItem__overview"
    >
      <div
        className="DashboardCrossingListItem__crossing-name"
      >
        <a
          href="/dashboard/crossing/1"
        >
          Spurlock Valley
        </a>
      </div>
      <div
        className="DashboardCrossingListItem__overview-details"
      >
        <div
          className="DashboardCrossingListItem__overview-location"
        >
          <div
            className="CrossingListItemLocationContainer"
          >
            <div>
              605 Spurlock Valley · West Lake Hills, TX 78746
            </div>
            <div
              className="CrossingListItemLocationContainer__description"
            >
              E of Intersection w/ Clifford
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__community-list"
          >
            <div
              className="CrossingCommunityList"
              onClick={[Function]}
            >
              <a
                href="/map/community/1234"
                onClick={[Function]}
              >
                <span
                  className="CrossingCommunityList__item"
                >
                  All of Texas.
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__overview-meta"
        >
          <div>
            10/10/2017
          </div>
          <div>
            4:35 AM
          </div>
          <div
            className="DashboardCrossingListItem__user"
          >
            S. Admin
          </div>
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__controls"
    >
      <div
        className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            <div>
              Status: 
              Caution
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="StatusToggleContainer"
          >
            <div
              className="StatusToggleItem StatusToggleItem__open"
              onClick={[Function]}
            >
              <img
                alt="Open"
                src="status-open-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__caution active"
              onClick={[Function]}
            >
              <img
                alt="Caution"
                src="status-caution.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__closed"
              onClick={[Function]}
            >
              <img
                alt="Closed"
                src="status-closed-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__longterm"
              onClick={[Function]}
            >
              <img
                alt="Closed Long-Term"
                src="status-long-term-inactive.svg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Reason
          </div>
          <div
            className="DashboardCrossingListItem__control-required"
          >
            Required
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="Dropdown"
          >
            <select
              className="Dropdown__select"
              id=""
              name=""
              onChange={[Function]}
              value={1}
            >
              <option
                value={1}
              >
                Flooded
              </option>
              <option
                value={2}
              >
                Bridge Broken
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Notes to the public
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <input
            className="DashboardCrossingListItem__notes-text-box"
            onChange={[Function]}
            type="text"
            value="Watch Out"
          />
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__button-container"
    >
      <button
        className="Shared__button DashboardCrossingListItem__cancel-button Shared__button--secondary"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        className="Shared__button DashboardCrossingListItem__save-button Shared__button--primary"
        disabled={false}
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Closed 1`] = `
<div
  className=""
>
  <div
    className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
  >
    <div
      className="DashboardCrossingListItem__overview"
    >
      <div
        className="DashboardCrossingListItem__crossing-name"
      >
        <a
          href="/dashboard/crossing/1"
        >
          Spurlock Valley
        </a>
      </div>
      <div
        className="DashboardCrossingListItem__overview-details"
      >
        <div
          className="DashboardCrossingListItem__overview-location"
        >
          <div
            className="CrossingListItemLocationContainer"
          >
            <div>
              605 Spurlock Valley · West Lake Hills, TX 78746
            </div>
            <div
              className="CrossingListItemLocationContainer__description"
            >
              E of Intersection w/ Clifford
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__community-list"
          >
            <div
              className="CrossingCommunityList"
              onClick={[Function]}
            >
              <a
                href="/map/community/1234"
                onClick={[Function]}
              >
                <span
                  className="CrossingCommunityList__item"
                >
                  All of Texas.
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__overview-meta"
        >
          <div>
            10/10/2017
          </div>
          <div>
            4:35 AM
          </div>
          <div
            className="DashboardCrossingListItem__user"
          >
            S. Admin
          </div>
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__controls"
    >
      <div
        className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            <div>
              Status: 
              Closed
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="StatusToggleContainer"
          >
            <div
              className="StatusToggleItem StatusToggleItem__open"
              onClick={[Function]}
            >
              <img
                alt="Open"
                src="status-open-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__caution"
              onClick={[Function]}
            >
              <img
                alt="Caution"
                src="status-caution-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__closed active"
              onClick={[Function]}
            >
              <img
                alt="Closed"
                src="status-closed.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__longterm"
              onClick={[Function]}
            >
              <img
                alt="Closed Long-Term"
                src="status-long-term-inactive.svg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Reason
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="Dropdown"
          >
            <select
              className="Dropdown__select"
              id=""
              name=""
              onChange={[Function]}
              value={1}
            >
              <option
                value={1}
              >
                Flooded
              </option>
              <option
                value={2}
              >
                Bridge Broken
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Notes to the public
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <input
            className="DashboardCrossingListItem__notes-text-box"
            onChange={[Function]}
            type="text"
            value="No Go"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Closed Dirty 1`] = `
<div
  className="DashboardCrossingListItem--dirty"
>
  <div
    className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
  >
    <div
      className="DashboardCrossingListItem__overview"
    >
      <div
        className="DashboardCrossingListItem__crossing-name"
      >
        <a
          href="/dashboard/crossing/1"
        >
          Spurlock Valley
        </a>
      </div>
      <div
        className="DashboardCrossingListItem__overview-details"
      >
        <div
          className="DashboardCrossingListItem__overview-location"
        >
          <div
            className="CrossingListItemLocationContainer"
          >
            <div>
              605 Spurlock Valley · West Lake Hills, TX 78746
            </div>
            <div
              className="CrossingListItemLocationContainer__description"
            >
              E of Intersection w/ Clifford
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__community-list"
          >
            <div
              className="CrossingCommunityList"
              onClick={[Function]}
            >
              <a
                href="/map/community/1234"
                onClick={[Function]}
              >
                <span
                  className="CrossingCommunityList__item"
                >
                  All of Texas.
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__overview-meta"
        >
          <div>
            10/10/2017
          </div>
          <div>
            4:35 AM
          </div>
          <div
            className="DashboardCrossingListItem__user"
          >
            S. Admin
          </div>
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__controls"
    >
      <div
        className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            <div>
              Status: 
              Closed
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="StatusToggleContainer"
          >
            <div
              className="StatusToggleItem StatusToggleItem__open"
              onClick={[Function]}
            >
              <img
                alt="Open"
                src="status-open-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__caution"
              onClick={[Function]}
            >
              <img
                alt="Caution"
                src="status-caution-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__closed active"
              onClick={[Function]}
            >
              <img
                alt="Closed"
                src="status-closed.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__longterm"
              onClick={[Function]}
            >
              <img
                alt="Closed Long-Term"
                src="status-long-term-inactive.svg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Reason
          </div>
          <div
            className="DashboardCrossingListItem__control-required"
          >
            Required
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="Dropdown"
          >
            <select
              className="Dropdown__select"
              id=""
              name=""
              onChange={[Function]}
              value={1}
            >
              <option
                value={1}
              >
                Flooded
              </option>
              <option
                value={2}
              >
                Bridge Broken
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Notes to the public
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <input
            className="DashboardCrossingListItem__notes-text-box"
            onChange={[Function]}
            type="text"
            value="No Go"
          />
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__button-container"
    >
      <button
        className="Shared__button DashboardCrossingListItem__cancel-button Shared__button--secondary"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        className="Shared__button DashboardCrossingListItem__save-button Shared__button--primary"
        disabled={false}
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Large Width 1`] = `
<div
  className="storybook--lg"
>
  <div
    className=""
  >
    <div
      className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
    >
      <div
        className="DashboardCrossingListItem__overview"
      >
        <div
          className="DashboardCrossingListItem__crossing-name"
        >
          <a
            href="/dashboard/crossing/1"
          >
            Spurlock Valley
          </a>
        </div>
        <div
          className="DashboardCrossingListItem__overview-details"
        >
          <div
            className="DashboardCrossingListItem__overview-location"
          >
            <div
              className="CrossingListItemLocationContainer"
            >
              <div>
                605 Spurlock Valley · West Lake Hills, TX 78746
              </div>
              <div
                className="CrossingListItemLocationContainer__description"
              >
                E of Intersection w/ Clifford
              </div>
            </div>
            <div
              className="DashboardCrossingListItem__community-list"
            >
              <div
                className="CrossingCommunityList"
                onClick={[Function]}
              >
                <a
                  href="/map/community/1234"
                  onClick={[Function]}
                >
                  <span
                    className="CrossingCommunityList__item"
                  >
                    All of Texas.
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__overview-meta"
          >
            <div>
              10/10/2017
            </div>
            <div>
              4:35 AM
            </div>
            <div
              className="DashboardCrossingListItem__user"
            >
              S. Admin
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__controls"
      >
        <div
          className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
        >
          <div
            className="DashboardCrossingListItem__control-meta"
          >
            <div
              className="DashboardCrossingListItem__control-label"
            >
              <div>
                Status: 
                Closed
              </div>
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__control-children"
          >
            <div
              className="StatusToggleContainer"
            >
              <div
                className="StatusToggleItem StatusToggleItem__open"
                onClick={[Function]}
              >
                <img
                  alt="Open"
                  src="status-open-inactive.svg"
                />
              </div>
              <div
                className="StatusToggleItem StatusToggleItem__caution"
                onClick={[Function]}
              >
                <img
                  alt="Caution"
                  src="status-caution-inactive.svg"
                />
              </div>
              <div
                className="StatusToggleItem StatusToggleItem__closed active"
                onClick={[Function]}
              >
                <img
                  alt="Closed"
                  src="status-closed.svg"
                />
              </div>
              <div
                className="StatusToggleItem StatusToggleItem__longterm"
                onClick={[Function]}
              >
                <img
                  alt="Closed Long-Term"
                  src="status-long-term-inactive.svg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control"
        >
          <div
            className="DashboardCrossingListItem__control-meta"
          >
            <div
              className="DashboardCrossingListItem__control-label"
            >
              Reason
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__control-children"
          >
            <div
              className="Dropdown"
            >
              <select
                className="Dropdown__select"
                id=""
                name=""
                onChange={[Function]}
                value={1}
              >
                <option
                  value={1}
                >
                  Flooded
                </option>
                <option
                  value={2}
                >
                  Bridge Broken
                </option>
              </select>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control"
        >
          <div
            className="DashboardCrossingListItem__control-meta"
          >
            <div
              className="DashboardCrossingListItem__control-label"
            >
              Notes to the public
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__control-children"
          >
            <input
              className="DashboardCrossingListItem__notes-text-box"
              onChange={[Function]}
              type="text"
              value="No Go"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Location Location 1`] = `
<div
  className="CrossingListItemLocationContainer"
>
  <div>
    605 Spurlock Valley · West Lake Hills, TX 78746
  </div>
  <div
    className="CrossingListItemLocationContainer__description"
  >
    E of Intersection w/ Clifford
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Open 1`] = `
<div
  className=""
>
  <div
    className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
  >
    <div
      className="DashboardCrossingListItem__overview"
    >
      <div
        className="DashboardCrossingListItem__crossing-name"
      >
        <a
          href="/dashboard/crossing/1"
        >
          Spurlock Valley
        </a>
      </div>
      <div
        className="DashboardCrossingListItem__overview-details"
      >
        <div
          className="DashboardCrossingListItem__overview-location"
        >
          <div
            className="CrossingListItemLocationContainer"
          >
            <div>
              605 Spurlock Valley · West Lake Hills, TX 78746
            </div>
            <div
              className="CrossingListItemLocationContainer__description"
            >
              E of Intersection w/ Clifford
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__community-list"
          >
            <div
              className="CrossingCommunityList"
              onClick={[Function]}
            >
              <a
                href="/map/community/1234"
                onClick={[Function]}
              >
                <span
                  className="CrossingCommunityList__item"
                >
                  All of Texas.
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__overview-meta"
        >
          <div>
            10/10/2017
          </div>
          <div>
            4:35 AM
          </div>
          <div
            className="DashboardCrossingListItem__user"
          >
            S. Admin
          </div>
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__controls"
    >
      <div
        className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            <div>
              Status: 
              Open
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="StatusToggleContainer"
          >
            <div
              className="StatusToggleItem StatusToggleItem__open active"
              onClick={[Function]}
            >
              <img
                alt="Open"
                src="status-open.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__caution"
              onClick={[Function]}
            >
              <img
                alt="Caution"
                src="status-caution-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__closed"
              onClick={[Function]}
            >
              <img
                alt="Closed"
                src="status-closed-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__longterm"
              onClick={[Function]}
            >
              <img
                alt="Closed Long-Term"
                src="status-long-term-inactive.svg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Notes to the public
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <input
            className="DashboardCrossingListItem__notes-text-box"
            onChange={[Function]}
            type="text"
            value="All Clear"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Open Dirty 1`] = `
<div
  className="DashboardCrossingListItem--dirty"
>
  <div
    className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
  >
    <div
      className="DashboardCrossingListItem__overview"
    >
      <div
        className="DashboardCrossingListItem__crossing-name"
      >
        <a
          href="/dashboard/crossing/1"
        >
          Spurlock Valley
        </a>
      </div>
      <div
        className="DashboardCrossingListItem__overview-details"
      >
        <div
          className="DashboardCrossingListItem__overview-location"
        >
          <div
            className="CrossingListItemLocationContainer"
          >
            <div>
              605 Spurlock Valley · West Lake Hills, TX 78746
            </div>
            <div
              className="CrossingListItemLocationContainer__description"
            >
              E of Intersection w/ Clifford
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__community-list"
          >
            <div
              className="CrossingCommunityList"
              onClick={[Function]}
            >
              <a
                href="/map/community/1234"
                onClick={[Function]}
              >
                <span
                  className="CrossingCommunityList__item"
                >
                  All of Texas.
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__overview-meta"
        >
          <div>
            10/10/2017
          </div>
          <div>
            4:35 AM
          </div>
          <div
            className="DashboardCrossingListItem__user"
          >
            S. Admin
          </div>
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__controls"
    >
      <div
        className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            <div>
              Status: 
              Open
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <div
            className="StatusToggleContainer"
          >
            <div
              className="StatusToggleItem StatusToggleItem__open active"
              onClick={[Function]}
            >
              <img
                alt="Open"
                src="status-open.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__caution"
              onClick={[Function]}
            >
              <img
                alt="Caution"
                src="status-caution-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__closed"
              onClick={[Function]}
            >
              <img
                alt="Closed"
                src="status-closed-inactive.svg"
              />
            </div>
            <div
              className="StatusToggleItem StatusToggleItem__longterm"
              onClick={[Function]}
            >
              <img
                alt="Closed Long-Term"
                src="status-long-term-inactive.svg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__control"
      >
        <div
          className="DashboardCrossingListItem__control-meta"
        >
          <div
            className="DashboardCrossingListItem__control-label"
          >
            Notes to the public
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control-children"
        >
          <input
            className="DashboardCrossingListItem__notes-text-box"
            onChange={[Function]}
            type="text"
            value="All Clear"
          />
        </div>
      </div>
    </div>
    <div
      className="DashboardCrossingListItem__button-container"
    >
      <button
        className="Shared__button DashboardCrossingListItem__cancel-button Shared__button--secondary"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        className="Shared__button DashboardCrossingListItem__save-button Shared__button--primary"
        disabled={false}
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Small Width 1`] = `
<div
  className="storybook--sm"
>
  <div
    className=""
  >
    <div
      className="DashboardCrossingListItem DashboardCrossingListItem--layout-undefined"
    >
      <div
        className="DashboardCrossingListItem__overview"
      >
        <div
          className="DashboardCrossingListItem__crossing-name"
        >
          <a
            href="/dashboard/crossing/1"
          >
            Spurlock Valley
          </a>
        </div>
        <div
          className="DashboardCrossingListItem__overview-details"
        >
          <div
            className="DashboardCrossingListItem__overview-location"
          >
            <div
              className="CrossingListItemLocationContainer"
            >
              <div>
                605 Spurlock Valley · West Lake Hills, TX 78746
              </div>
              <div
                className="CrossingListItemLocationContainer__description"
              >
                E of Intersection w/ Clifford
              </div>
            </div>
            <div
              className="DashboardCrossingListItem__community-list"
            >
              <div
                className="CrossingCommunityList"
                onClick={[Function]}
              >
                <a
                  href="/map/community/1234"
                  onClick={[Function]}
                >
                  <span
                    className="CrossingCommunityList__item"
                  >
                    All of Texas.
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__overview-meta"
          >
            <div>
              10/10/2017
            </div>
            <div>
              4:35 AM
            </div>
            <div
              className="DashboardCrossingListItem__user"
            >
              S. Admin
            </div>
          </div>
        </div>
      </div>
      <div
        className="DashboardCrossingListItem__controls"
      >
        <div
          className="DashboardCrossingListItem__control DashboardCrossingListItem__control--status"
        >
          <div
            className="DashboardCrossingListItem__control-meta"
          >
            <div
              className="DashboardCrossingListItem__control-label"
            >
              <div>
                Status: 
                Closed
              </div>
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__control-children"
          >
            <div
              className="StatusToggleContainer"
            >
              <div
                className="StatusToggleItem StatusToggleItem__open"
                onClick={[Function]}
              >
                <img
                  alt="Open"
                  src="status-open-inactive.svg"
                />
              </div>
              <div
                className="StatusToggleItem StatusToggleItem__caution"
                onClick={[Function]}
              >
                <img
                  alt="Caution"
                  src="status-caution-inactive.svg"
                />
              </div>
              <div
                className="StatusToggleItem StatusToggleItem__closed active"
                onClick={[Function]}
              >
                <img
                  alt="Closed"
                  src="status-closed.svg"
                />
              </div>
              <div
                className="StatusToggleItem StatusToggleItem__longterm"
                onClick={[Function]}
              >
                <img
                  alt="Closed Long-Term"
                  src="status-long-term-inactive.svg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control"
        >
          <div
            className="DashboardCrossingListItem__control-meta"
          >
            <div
              className="DashboardCrossingListItem__control-label"
            >
              Reason
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__control-children"
          >
            <div
              className="Dropdown"
            >
              <select
                className="Dropdown__select"
                id=""
                name=""
                onChange={[Function]}
                value={1}
              >
                <option
                  value={1}
                >
                  Flooded
                </option>
                <option
                  value={2}
                >
                  Bridge Broken
                </option>
              </select>
            </div>
          </div>
        </div>
        <div
          className="DashboardCrossingListItem__control"
        >
          <div
            className="DashboardCrossingListItem__control-meta"
          >
            <div
              className="DashboardCrossingListItem__control-label"
            >
              Notes to the public
            </div>
          </div>
          <div
            className="DashboardCrossingListItem__control-children"
          >
            <input
              className="DashboardCrossingListItem__notes-text-box"
              onChange={[Function]}
              type="text"
              value="No Go"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Status Toggle Caution 1`] = `
<div
  className="StatusToggleContainer"
>
  <div
    className="StatusToggleItem StatusToggleItem__open"
    onClick={[Function]}
  >
    <img
      alt="Open"
      src="status-open-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__caution active"
    onClick={[Function]}
  >
    <img
      alt="Caution"
      src="status-caution.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__closed"
    onClick={[Function]}
  >
    <img
      alt="Closed"
      src="status-closed-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__longterm"
    onClick={[Function]}
  >
    <img
      alt="Closed Long-Term"
      src="status-long-term-inactive.svg"
    />
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Status Toggle Closed 1`] = `
<div
  className="StatusToggleContainer"
>
  <div
    className="StatusToggleItem StatusToggleItem__open"
    onClick={[Function]}
  >
    <img
      alt="Open"
      src="status-open-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__caution"
    onClick={[Function]}
  >
    <img
      alt="Caution"
      src="status-caution-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__closed active"
    onClick={[Function]}
  >
    <img
      alt="Closed"
      src="status-closed.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__longterm"
    onClick={[Function]}
  >
    <img
      alt="Closed Long-Term"
      src="status-long-term-inactive.svg"
    />
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Status Toggle Long-Term Closure 1`] = `
<div
  className="StatusToggleContainer"
>
  <div
    className="StatusToggleItem StatusToggleItem__open"
    onClick={[Function]}
  >
    <img
      alt="Open"
      src="status-open-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__caution"
    onClick={[Function]}
  >
    <img
      alt="Caution"
      src="status-caution-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__closed"
    onClick={[Function]}
  >
    <img
      alt="Closed"
      src="status-closed-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__longterm active"
    onClick={[Function]}
  >
    <img
      alt="Closed Long-Term"
      src="status-long-term.svg"
    />
  </div>
</div>
`;

exports[`Storyshots Crossing List Item Status Toggle Open 1`] = `
<div
  className="StatusToggleContainer"
>
  <div
    className="StatusToggleItem StatusToggleItem__open active"
    onClick={[Function]}
  >
    <img
      alt="Open"
      src="status-open.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__caution"
    onClick={[Function]}
  >
    <img
      alt="Caution"
      src="status-caution-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__closed"
    onClick={[Function]}
  >
    <img
      alt="Closed"
      src="status-closed-inactive.svg"
    />
  </div>
  <div
    className="StatusToggleItem StatusToggleItem__longterm"
    onClick={[Function]}
  >
    <img
      alt="Closed Long-Term"
      src="status-long-term-inactive.svg"
    />
  </div>
</div>
`;

exports[`Storyshots List Users List Users 1`] = `
<div>
  Loading
</div>
`;
